--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "node ./tests/run_mocha.js",
     "build": "npx webpack",
     "lint": "npx eslint **/*.js",
-    "lint-fix": "npx eslint **/*.js --fix"
+    "lint-fix": "npx eslint **/*.js --fix",
+    "watch": "tsc -w"
   },
   "repository": {
     "type": "git",
@@ -23,10 +24,13 @@
   },
   "homepage": "https://github.com/nielsbohr/shri-2020-2#readme",
   "devDependencies": {
+    "@types/node": "^13.1.2",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
     "mocha": "^6.2.2",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
