--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "npx webpack",
     "lint": "npx eslint **/*.js",
     "lint-fix": "npx eslint **/*.js --fix",
-    "watch": "tsc -w"
+    "tsc": "tsc",
+    "watch": "tsc -w",
+    "tslint": "npx tslint ./src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,9 @@
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
+    "html-webpack-plugin": "^3.2.0",
     "mocha": "^6.2.2",
+    "ts-loader": "^6.2.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.2",
