--- a/package.json
+++ b/package.json
@@ -2,18 +2,10 @@
   "name": "shri-2020-2",
   "version": "1.0.0",
   "description": "2 test task for SHRI 2020",
-  "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
   "scripts": {
-    "test": "node ./tests/run_mocha.js",
-    "build": "npx webpack",
-    "lint": "npx eslint **/*.js",
-    "lint-fix": "npx eslint **/*.js --fix",
-    "tsc": "tsc",
-    "watch": "tsc -w",
-    "tslint": "npx tslint ./src/**/*.ts"
+    "test": "mocha -w",
+    "dev": "npx webpack",
+    "lint": "npx eslint **/*.js --fix && npx tslint ./src/**/*.ts --fix"
   },
   "repository": {
     "type": "git",
@@ -27,15 +19,18 @@
   "homepage": "https://github.com/nielsbohr/shri-2020-2#readme",
   "devDependencies": {
     "@types/node": "^13.1.2",
+    "chai": "^4.2.0",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
-    "html-webpack-plugin": "^3.2.0",
     "mocha": "^6.2.2",
     "ts-loader": "^6.2.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "html-webpack-plugin": "^3.2.0"
   }
 }
