--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "mocha -w",
     "dev": "npx webpack",
+    "devtest": "webpack-dev-server --config webpack.test.js",
     "lint": "npx eslint **/*.js --fix && npx tslint ./src/**/*.ts --fix"
   },
   "repository": {
@@ -24,13 +25,13 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
     "mocha": "^6.2.2",
+    "mocha-loader": "^4.0.1",
     "ts-loader": "^6.2.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
-  "dependencies": {
-    "html-webpack-plugin": "^3.2.0"
-  }
+  "dependencies": {}
 }
